--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
