--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-animated-text": "^0.1.4",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^5.1.2"
   }
 }
