--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.7.0",
