--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.1.1",
+    "lodash.update": "^4.10.2",
     "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-animated-text": "^0.1.4",
