--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-animated-text": "^0.1.4",
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.1.2",
-    "sass-burger": "^1.3.1"
+    "sass-burger": "^1.3.1",
+    "serialize-javascript": "^4.0.0"
   }
 }
