--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.1.2",
     "sass-burger": "^1.3.1",
-    "serialize-javascript": "^4.0.0"
+    "serialize-javascript": "^4.0.0",
+    "websocket-extensions": "^0.1.4"
   }
 }
