--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "http-proxy": "^1.18.1",
     "lodash.update": "^4.10.2",
     "moment": "^2.24.0",
+    "node-forge": "^0.10.0",
     "react": "^16.7.0",
     "react-animated-text": "^0.1.4",
     "react-dom": "^16.7.0",
