--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^5.1.2",
     "sass-burger": "^1.3.1",
     "serialize-javascript": "^4.0.0",
+    "tar": "^6.1.11",
     "websocket-extensions": "^0.1.4"
   }
 }
