--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "elliptic": "^6.5.3",
+    "follow-redirects": "^1.14.7",
     "gh-pages": "^2.1.1",
     "http-proxy": "^1.18.1",
     "jquery": "^3.5.1",
